[package]
name = "patu"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
patu-common = { path = "../patu-common", features=["user"] }
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.42"
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
netlink-sys = "0.8.2"
netlink-packet-core = "0.4.2"
netlink-packet-route = "0.11"
futures = "0.3"
rand = "0.8"
atty = "0.2"
nix = { version = "0.24", features = ["net", "sched", "fs"] }
iptables = "0.5.0"

[lib]

[[bin]]
name = "patu"
path = "src/bin/main.rs"
